@@ -1,3 +1,7 @@
+2017-11-02  NIIBE Yutaka  <gniibe@fsij.org>
+
+	* src/openpgp-do.c (rw_kdf): Only writable when no keys.
+
 2017-11-01  NIIBE Yutaka  <gniibe@fsij.org>
 
 	* src/openpgp-do.c (GPG_DO_KDF): New.
